--- a/mod.css
+++ b/mod.css
@@ -206,15 +206,20 @@ input[type="color"],
 	top: 0px !important;
 	right: 0 !important;
 	z-index: 999 !important;
-	margin: 5px 3px 0 0 !important;
+	margin: 0 0 0 0 !important;
 	flex-direction: column-reverse;
 }
 
 .window-buttongroup > * {
-	width: 28px !important;
+	width: 34px !important;
 	height: 28px !important;
-	margin: 0 0 1px 0 !important;
-	border-radius: 100px !important;
+	margin: 0 0 0 0 !important;
+	border-radius: 7px 0 0 7px !important;
+}
+
+/* klast child */
+.window-buttongroup > :last-child {
+	border-radius: 0 0 0 10px !important;
 }
 
 .toolbar-default .button-toolbar > button:enabled {
